<resources>
    <string name="app_name">YoutubeClone</string>
    <string name="itemHome">Home</string>
    <string name="itemExplore">Explore</string>
    <string name="itemSubscriptions">Subscriptions</string>
    <string name="itemPublish">Publish</string>
    <string name="itemNotification">Notification</string>
    <string name="itemSearch">Search</string>
    <string name="itemAccount">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toastAddAVideo">Add a video</string>
    <string name="itemLibrary">Library</string>
    <string name="tvText">You need to sign in for content management</string>
    <string name="tvRecent">Recent</string>
    <string name="tvHistory">History</string>
    <string name="tvYour_videos">Your videos</string>
    <string name="tvDownloads">Downloads</string>
    <string name="tvWatch_later">Watch later</string>
    <string name="tvLiked_videos">Liked videos</string>
    <string name="tvPlaylist">PlayList</string>
    <string name="tvNew_playlist">New PlayList</string>
    <string name="tvUserChannelName">Username</string>
    <string name="tvEmail">email</string>
    <string name="tvYourChannel">Your account</string>
    <string name="tvSettings">Settings</string>
    <string name="tvHelpFeedback">Help and feedback</string>
    <string name="tvYoutubeClone">Use Youtube clone As ......</string>
    <string name="tvInputChannelName">Channel name</string>
    <string name="tvDescription">Description</string>
    <string name="tvTerms">By creating new channel accept our terms and conditions</string>
    <string name="tvCreateChannel">Create channel</string>
    <string name="tvGoogleSignIn">Continue with google</string>
    <string name="toastRequiredName">Fill required field name</string>
    <string name="toastRequiredDescription">Fill required field description</string>
    <string name="toastUserHaveChannel">User have a channel</string>
    <string name="progressDialogTitle">New Channel</string>
    <string name="progressDialogMessage">Creating ...</string>
    <string name="toastChannelCreated">%s channel has been created</string>
    <string name="toastSelectVideo">Select video</string>
    <string name="toastSomethingWrost">Something went wrost</string>
    <string name="tvUpload">Upload</string>
    <string name="etDescription">Title</string>
    <string name="etTitle">Title</string>
    <string name="etTag">Tag</string>
    <string name="tvChoosePlaylist">Choose Playlist</string>
    <string name="tvUploadVideo">Upload Video</string>
    <string name="tvDialogue">Share your content with our large community</string>
    <string name="tvMakePost">Make post</string>
    <string name="tvDialogueUpload">Share interesting and entertaining posts to your subscribers</string>
    <string name="tvReleaseAPoll">Release a poll</string>
    <string name="tvPool">Create a simple poll with your favourite questions</string>
    <string name="txtVideosCount">Videos %d</string>
    <string name="videoTitle">%d views</string>
    <string name="toastNoData">No data found</string>
    <string name="toastEnterPlaylist">Enter Playlist name</string>
    <string name="toastFillTitle">Fill title field</string>
    <string name="toastFillDescription">Fill description field</string>
    <string name="toastSelectPlaylist">Please select playlist</string>
    <string name="toastVideoUploaded">Video uploaded</string>
    <string name="toastFailedUpload">Failed to upload</string>
    <string name="toastNewPlaylistCreated">New playlist created</string>
    <string name="toastUserHavePlaylists">User have playlists</string>
</resources>