<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/itemHome"
        android:id="@+id/home"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/itemExplore"
        android:id="@+id/explore"
        android:icon="@drawable/ic_launcher_background"
        app:showAsAction="ifRoom"
        />
    <item
        android:title="@string/itemSubscriptions"
        android:id="@+id/subscriptions"
        android:icon="@drawable/ic_launcher_background"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/itemPublish"
        android:id="@+id/publish"
        android:icon="@drawable/ic_launcher_background"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/itemLibrary"
        android:id="@+id/library"
        android:icon="@drawable/ic_launcher_background"
        app:showAsAction="ifRoom"
        />
</menu>