<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/tvRecent"
                android:textColor="@color/black"
                android:textSize="16dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:padding="5dp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorDivider" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/history"
                android:drawablePadding="28dp"
                android:padding="5dp"
                android:text="@string/tvHistory"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/your_video"
                android:drawablePadding="28dp"
                android:padding="5dp"
                android:text="@string/tvYour_videos"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/download"
                android:drawablePadding="28dp"
                android:padding="5dp"
                android:text="@string/tvDownloads"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/watch_later"
                android:drawablePadding="28dp"
                android:padding="5dp"
                android:text="@string/tvWatch_later"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/like_video"
                android:drawablePadding="28dp"
                android:padding="5dp"
                android:text="@string/tvLiked_videos"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <View
                android:id="@+id/View"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorDivider" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/tvPlaylist"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/tvNew_playlist"
            android:textColor="#5E23AF"
            android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/playlist_recyclerView"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>